src/objects/VspOauthToken__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Token</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>expires_in__c</fullName>
        <label>Expires In</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>granted_at__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Granted At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tokenId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Token Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>VspOauthToken</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>VspOauthToken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VspOauthTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>